fix(statistics): time button hover now works on firefox

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -74,6 +74,19 @@ h1 small, h2 small, h3 small, h4 small, h5 small {font-weight: 100; color: #818a
     }
 }
 
+.statistics-time-button {
+    display:relative;
+    .time-card {
+        display:none;
+        position: absolute;
+        left:100%;
+        top:0;
+        padding-left: 10px;
+        text-align: left;
+    }
+    &:hover .time-card {display: block;}
+}
+
 .c-inputs-stacked.fixed {margin-bottom: -1.5em}
 .checkbox-input-group {padding: .375rem .75rem}
 .form-control-sm {padding-top: 4px; padding-bottom: 4px;}
